--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,15 @@
-name: angular_objectory_demo
+name: angular_dart_demo
 version: 0.0.1
 dependencies:
-  angular: any
+  angular: 0.10.0
   browser: any
+  http_server: any
   js: any
-  objectory: any
+  objectory: '>=0.3.16'
+  route_hierarchical: '>=0.4.18 <0.5.0'
+  shadow_dom: any
   stream: any
 dev_dependencies:
   unittest: any
+transformers:
+- angular
